--- a/DATA/ABV/Jsonc/Versions.jsonc
+++ b/DATA/ABV/Jsonc/Versions.jsonc
@@ -10,81 +10,81 @@ SQLIte3 Bible.db key: value pairs from ABibleVersions
     {
         "ar": "AKJ",
         "id": 23,
-        "vn": "American King James Version(AKJ)"
+        "vn": "American King James Version"
     },
     {
         "ar": "ASV",
         "id": 2,
-        "vn": "American Standard Version(ASV)"
+        "vn": "American Standard Version"
     },
     {
         "ar": "BSB",
         "id": 16,
-        "vn": "Berean Standard Bible(BSB)"
+        "vn": "Berean Standard Bible"
     },
     {
         "ar": "BBE",
         "id": 3,
-        "vn": "Bible in Basic English(BBE)"
+        "vn": "Bible in Basic English"
     },
     {
         "ar": "BBB",
         "id": 20,
-        "vn": "Bishop's-Bible(BBB)"
+        "vn": "Bishop's-Bible"
     },
     {
         "ar": "CBV",
         "id": 21,
-        "vn": "Coverdale Bible(CBV)"
+        "vn": "Coverdale Bible"
     },
     {
         "ar": "DBY",
         "id": 4,
-        "vn": "Darby English Bible(DBY)"
+        "vn": "Darby English Bible"
     },
     {
         "ar": "DRB",
         "id": 15,
-        "vn": "Douay-Rheims Bible(DRB)"
+        "vn": "Douay-Rheims Bible"
     },
     {
         "ar": "ERV",
         "id": 24,
-        "vn": "English Revised Version(ERV)"
+        "vn": "English Revised Version"
     },
     {
         "ar": "GNV",
         "id": 22,
-        "vn": "Geneva Bible(GNV)"
+        "vn": "Geneva Bible"
     },
     {
         "ar": "KJV",
         "id": 5,
-        "vn": "King James Version(KJV)"
+        "vn": "King James Version"
     },
     {
         "ar": "NWB",
         "id": 6,
-        "vn": "Noah Webster's Bible(NWB)"
+        "vn": "Noah Webster's Bible"
     },
     {
         "ar": "SLT",
         "id": 18,
-        "vn": "Smith's Literal Translation(SLT)"
+        "vn": "Smith's Literal Translation"
     },
     {
         "ar": "TWF",
         "id": 1,
-        "vn": "Twenty-First Century Bible(TWF)"
+        "vn": "Twenty-First Century Bible"
     },
     {
         "ar": "WEB",
         "id": 7,
-        "vn": "World English Bible(WEB)"
+        "vn": "World English Bible"
     },
     {
         "ar": "YLT",
         "id": 8,
-        "vn": "Young's Literal Translation(YLT)"
+        "vn": "Young's Literal Translation"
     }
 ]
